LABS/Compiler/Labs/exprsParser.py
# Generated from exprs.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class exprsParser ( Parser ):

    grammarFileName = "exprs.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'end'", "'('", "')'", "','", 
                     "'main'", "'return'", "'write'", "':='", "'if'", "'then'", 
                     "'while'", "'do'", "'^'", "'/'", "'*'", "'-'", "'+'", 
                     "'=='", "'<='", "'>='", "'<'", "'>'", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VAR", "NUM", "WS" ]

    RULE_root = 0
    RULE_function = 1
    RULE_cap = 2
    RULE_parametres = 3
    RULE_main = 4
    RULE_instr = 5
    RULE_return = 6
    RULE_printat = 7
    RULE_assig = 8
    RULE_condnal = 9
    RULE_bucle = 10
    RULE_condicio = 11
    RULE_expr = 12
    RULE_operador = 13

    ruleNames =  [ "root", "function", "cap", "parametres", "main", "instr", 
                   "return", "printat", "assig", "condnal", "bucle", "condicio", 
                   "expr", "operador" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    VAR=25
    NUM=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(exprsParser.MainContext,0)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.FunctionContext)
            else:
                return self.getTypedRuleContext(exprsParser.FunctionContext,i)


        def getRuleIndex(self):
            return exprsParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = exprsParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 28
                self.function()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cap(self):
            return self.getTypedRuleContext(exprsParser.CapContext,0)


        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.InstrContext)
            else:
                return self.getTypedRuleContext(exprsParser.InstrContext,i)


        def getRuleIndex(self):
            return exprsParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = exprsParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(exprsParser.T__0)
            self.state = 37
            self.cap()
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33559936) != 0):
                self.state = 38
                self.instr()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(exprsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CapContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(exprsParser.VAR, 0)

        def parametres(self):
            return self.getTypedRuleContext(exprsParser.ParametresContext,0)


        def getRuleIndex(self):
            return exprsParser.RULE_cap

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCap" ):
                return visitor.visitCap(self)
            else:
                return visitor.visitChildren(self)




    def cap(self):

        localctx = exprsParser.CapContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cap)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(exprsParser.VAR)
            self.state = 47
            self.match(exprsParser.T__2)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 48
                self.parametres()


            self.state = 51
            self.match(exprsParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(exprsParser.VAR)
            else:
                return self.getToken(exprsParser.VAR, i)

        def getRuleIndex(self):
            return exprsParser.RULE_parametres

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametres" ):
                return visitor.visitParametres(self)
            else:
                return visitor.visitChildren(self)




    def parametres(self):

        localctx = exprsParser.ParametresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parametres)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(exprsParser.VAR)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 54
                self.match(exprsParser.T__4)
                self.state = 55
                self.match(exprsParser.VAR)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_main

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MainExpContext(MainContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.MainContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.InstrContext)
            else:
                return self.getTypedRuleContext(exprsParser.InstrContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainExp" ):
                return visitor.visitMainExp(self)
            else:
                return visitor.visitChildren(self)



    def main(self):

        localctx = exprsParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_main)
        self._la = 0 # Token type
        try:
            localctx = exprsParser.MainExpContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(exprsParser.T__5)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33559936) != 0):
                self.state = 62
                self.instr()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(exprsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_instr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignacioContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assig(self):
            return self.getTypedRuleContext(exprsParser.AssigContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignacio" ):
                return visitor.visitAssignacio(self)
            else:
                return visitor.visitChildren(self)


    class CondicionalContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condnal(self):
            return self.getTypedRuleContext(exprsParser.CondnalContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bucle(self):
            return self.getTypedRuleContext(exprsParser.BucleContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class ReturnInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def return_(self):
            return self.getTypedRuleContext(exprsParser.ReturnContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnInstr" ):
                return visitor.visitReturnInstr(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printat(self):
            return self.getTypedRuleContext(exprsParser.PrintatContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)



    def instr(self):

        localctx = exprsParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instr)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                localctx = exprsParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.printat()
                pass
            elif token in [25]:
                localctx = exprsParser.AssignacioContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.assig()
                pass
            elif token in [10]:
                localctx = exprsParser.CondicionalContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.condnal()
                pass
            elif token in [12]:
                localctx = exprsParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.bucle()
                pass
            elif token in [7]:
                localctx = exprsParser.ReturnInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.return_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(exprsParser.ExprContext,0)


        def getRuleIndex(self):
            return exprsParser.RULE_return

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)




    def return_(self):

        localctx = exprsParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(exprsParser.T__6)
            self.state = 78
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_printat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WriteExpContext(PrintatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.PrintatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(exprsParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteExp" ):
                return visitor.visitWriteExp(self)
            else:
                return visitor.visitChildren(self)



    def printat(self):

        localctx = exprsParser.PrintatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_printat)
        try:
            localctx = exprsParser.WriteExpContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(exprsParser.T__7)
            self.state = 81
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_assig

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssigExpContext(AssigContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.AssigContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(exprsParser.VAR, 0)
        def expr(self):
            return self.getTypedRuleContext(exprsParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssigExp" ):
                return visitor.visitAssigExp(self)
            else:
                return visitor.visitChildren(self)



    def assig(self):

        localctx = exprsParser.AssigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assig)
        try:
            localctx = exprsParser.AssigExpContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(exprsParser.VAR)
            self.state = 84
            self.match(exprsParser.T__8)
            self.state = 85
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondnalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_condnal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondnalExpContext(CondnalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.CondnalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicio(self):
            return self.getTypedRuleContext(exprsParser.CondicioContext,0)

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.InstrContext)
            else:
                return self.getTypedRuleContext(exprsParser.InstrContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondnalExp" ):
                return visitor.visitCondnalExp(self)
            else:
                return visitor.visitChildren(self)



    def condnal(self):

        localctx = exprsParser.CondnalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condnal)
        self._la = 0 # Token type
        try:
            localctx = exprsParser.CondnalExpContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(exprsParser.T__9)
            self.state = 88
            self.condicio()
            self.state = 89
            self.match(exprsParser.T__10)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33559936) != 0):
                self.state = 90
                self.instr()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(exprsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BucleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_bucle

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BucleExpContext(BucleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.BucleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicio(self):
            return self.getTypedRuleContext(exprsParser.CondicioContext,0)

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.InstrContext)
            else:
                return self.getTypedRuleContext(exprsParser.InstrContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBucleExp" ):
                return visitor.visitBucleExp(self)
            else:
                return visitor.visitChildren(self)



    def bucle(self):

        localctx = exprsParser.BucleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bucle)
        self._la = 0 # Token type
        try:
            localctx = exprsParser.BucleExpContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(exprsParser.T__11)
            self.state = 99
            self.condicio()
            self.state = 100
            self.match(exprsParser.T__12)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33559936) != 0):
                self.state = 101
                self.instr()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(exprsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_condicio

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondicioExpContext(CondicioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.CondicioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)

        def operador(self):
            return self.getTypedRuleContext(exprsParser.OperadorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicioExp" ):
                return visitor.visitCondicioExp(self)
            else:
                return visitor.visitChildren(self)



    def condicio(self):

        localctx = exprsParser.CondicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condicio)
        try:
            localctx = exprsParser.CondicioExpContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.expr(0)
            self.state = 110
            self.operador()
            self.state = 111
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv" ):
                return visitor.visitDiv(self)
            else:
                return visitor.visitChildren(self)


    class SumaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuma" ):
                return visitor.visitSuma(self)
            else:
                return visitor.visitChildren(self)


    class NumeroContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(exprsParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumero" ):
                return visitor.visitNumero(self)
            else:
                return visitor.visitChildren(self)


    class PotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPot" ):
                return visitor.visitPot(self)
            else:
                return visitor.visitChildren(self)


    class MulContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMul" ):
                return visitor.visitMul(self)
            else:
                return visitor.visitChildren(self)


    class CapFuncioContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def cap(self):
            return self.getTypedRuleContext(exprsParser.CapContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCapFuncio" ):
                return visitor.visitCapFuncio(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(exprsParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class RestaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResta" ):
                return visitor.visitResta(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = exprsParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = exprsParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 114
                self.match(exprsParser.VAR)
                pass

            elif la_ == 2:
                localctx = exprsParser.NumeroContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 115
                self.match(exprsParser.NUM)
                pass

            elif la_ == 3:
                localctx = exprsParser.CapFuncioContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 116
                self.cap()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 134
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = exprsParser.PotContext(self, exprsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 119
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 120
                        self.match(exprsParser.T__13)
                        self.state = 121
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = exprsParser.DivContext(self, exprsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 122
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 123
                        self.match(exprsParser.T__14)
                        self.state = 124
                        self.expr(8)
                        pass

                    elif la_ == 3:
                        localctx = exprsParser.MulContext(self, exprsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 125
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 126
                        self.match(exprsParser.T__15)
                        self.state = 127
                        self.expr(7)
                        pass

                    elif la_ == 4:
                        localctx = exprsParser.RestaContext(self, exprsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 128
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 129
                        self.match(exprsParser.T__16)
                        self.state = 130
                        self.expr(6)
                        pass

                    elif la_ == 5:
                        localctx = exprsParser.SumaContext(self, exprsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 131
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 132
                        self.match(exprsParser.T__17)
                        self.state = 133
                        self.expr(5)
                        pass

             
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperadorContext(ParserRuleContext):
        __slots__ = 'parser'
